# fishtools

./: .gitignore  README.rst  config.yml  config_extra_options.yml  pyproject.toml  running_instructions.txt
filtering_and_processing/: exclude_selected.py  manual_assessment_example.txt
fishtools/: config.py  data.py  probes.py  process.py  segment.py  utils.py  vis.py
fishtools_scripts/: data.py  fishtools.py  probes.py  process.py  segment.py  vis.py
imageJ_plugin/: README.txt  load_annotation_from_csv.py  load_probe_positions_3d.py  save_annotation.py
scripts/: check_config.py  genotype_from_fpaths.py  merge_csv_files.py  process_a_data_item.py  process_from_config.py  process_separate_layers_from_config.py  trawl_for_raw_image_data.py
tests/: test_fishtools.py
