[tool.poetry]
name = "fishtools"
version = "0.1.0"
description = ""
authors = ["Matthew Hartley <mhartley@cantab.net>"]

[tool.poetry.dependencies]
python = "^3.8"
dtoolbioimage = "^0.1.9"
dtool-azure = "^0.7.1"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
